--- a/src/components/common/common.css
+++ b/src/components/common/common.css
@@ -2,6 +2,8 @@
 * {
   padding: 0;
   margin: 0;
+  font-family: 'Noto Sans CJK KR', sans-serif;
+
 }
 
 ul,ol {
@@ -20,4 +22,42 @@ h1,h2,h3,h4,h5,h6 {
 .inner-box{
   width: 1300px; 
   margin: 0 auto;
+}
+
+/* font */
+@font-face {
+  font-family: 'Noto Sans CJK KR';
+  font-style: normal;
+  font-weight: 100;
+  src: url("../../style/font/NotoSansKR-Light.woff2") format('woff2'),
+  url("../../style/font/NotoSansKR-Light.woff") format('woff'),
+  url("../../style/font/NotoSansKR-Light.otf") format('truetype')
+}
+
+@font-face {
+  font-family: 'Noto Sans CJK KR';
+  font-style: normal;
+  font-weight: normal;
+  src: url("../../style/font/NotoSansKR-Regular.woff2") format('woff2'),
+  url("../../style/font/NotoSansKR-Regular.woff") format('woff'),
+  url("../../style/font/NotoSansKR-Regular.otf") format('truetype')
+}
+
+
+@font-face {
+  font-family: 'Noto Sans CJK KR';
+  font-style: normal;
+  font-weight: 500;
+  src: url("../../style/font/NotoSansKR-Medium.woff2") format('woff2'),
+  url("../../style/font/NotoSansKR-Medium.woff") format('woff'),
+  url("../../style/font/NotoSansKR-Medium.otf") format('truetype')
+}
+
+@font-face {
+  font-family: 'Noto Sans CJK KR';
+  font-style: normal;
+  font-weight: bold;
+  src: url("../../style/font/NotoSansKR-Bold.woff2") format('woff2'),
+  url("../../style/font/NotoSansKR-Bold.woff") format('woff'),
+  url("../../style/font/NotoSansKR-Bold.otf") format('truetype')
 }
