--- a/src/components/common/header.css
+++ b/src/components/common/header.css
@@ -4,6 +4,9 @@
   padding: 30px 0;
 }
 
+.header-top .top-logo {
+}
+
 .header-top .top-logo a{
   display: block;
   width: 180px;
@@ -14,58 +17,133 @@
 }
 
 .header-top .top-search{
+  position: relative;
+  display: flex;
+  align-items: center;
+  height: 62px;
+  margin-left: 50px;
   margin-right: auto;
+ 
 }
 
 .header-top .top-search-input {
-  
+  padding:11px 38px 9px 10px;
+  border: none;
+  border-bottom: 1px solid black;
+  font-size: 16px;
+}
+
+.header-top .top-search-input:focus {
+  outline : none;
+}
+
+.header-top .top-search-btn {
+  position: absolute;
+  top:30%;right:0;
+
 }
 
 .header-top .top-search-btn img{
   width: 24px;
 }
 
-
-.header-bottom .gnb {
-  display: flex;
-  z-index: 1;
+.header-top .top-btn{
   
 
 }
 
-.header-bottom .gnb .depth1 {
-  width: 200px;
+.header-top .top-btn a{
+  margin:0 8px;
+  font-size:14px;
+  color:#7e7e7e;
+}s
+
+.header-top .top-btn .sitemap{
+  margin-left: 8px;
 }
 
-.header-bottom .gnb .depth1>a {
+
+
+
+/* gnb */
+nav.header-bottom {
+  position: relative;
+}
+.header-bottom ul.gnb::before{
+  content: '';
   display: block;
+  position: absolute;
+  top: 70px;
+  left: 0;
+  width: 100%;
+  height: 0px;
+  background-color: #fff;
+  box-shadow: 0 4px 4px -4px #666;
+  overflow: hidden;
+  z-index: 9999;
+
+}
+.header-bottom ul.gnb:hover::before{
+  height: 250px;
+  transition: height .4s ease-out;
+}
+
+.header-bottom ul.gnb {
+  display: flex;
+  
+}
+
+.header-bottom ul.gnb li.depth1 {
+  flex : auto;
   height: 70px;
+}
+.header-bottom ul.gnb > li.depth1:hover>a {
+  color: #27aa84;
+  /* background-color: #27aa84;
+  border-radius: 6px 6px 0 0; */
+}
+
+.header-bottom ul.gnb li.depth1 > a {
+  display: block;
+  width: 100%;
+  height: 100%;
   line-height: 70px;
   text-align: center;
   font-size: 20px;
+  font-weight: 500;
+}
+
+.header-bottom ul.gnb li.depth1 ul.depth2 {
+  position: absolute;
+  height: 0px;
+  overflow: hidden;
+}
+
+.header-bottom ul.gnb:hover li.depth1 ul.depth2 {
+  height: 230px;
+  padding-left: 41px;
+  padding-bottom: 12px;
+  text-align: left;
+  padding-top: 19px;
+  cursor: pointer;
+  overflow: hidden;
+  transition: height .5s ease-out;
+  z-index: 9999;
   
 }
-
-.header-bottom .gnb > .depth1:hover>a {
-  color: lightseagreen;
-  border-radius: 6px 6px 0 0;
+.header-bottom ul.gnb:hover li.depth1 ul.depth2 li{
 }
-.header-bottom .gnb > .depth1:hover> .depth2{
-  background-color: lightseagreen;
-}
-
-.header-bottom .gnb .depth2 {
-  display: none;
-}
-
-.header-bottom .gnb:hover .depth2 {
+.header-bottom ul.gnb:hover li.depth1 ul.depth2 li a{
   display: block;
-  height: 150px;
-  background-color: #fffbfb;
+  /* width: 100%; */
+  height: 100%;
+  padding: 5px 0;
+  margin-left: 50px;
 }
-
-.header-bottom .gnb .depth2>li:hover {
-  color: red;
+.header-bottom ul.gnb li.depth1 ul.depth2 li:hover a{
+  color: #666;
+  text-decoration: underline;
+  text-decoration-color: #27aa84;
 }
 
 
