--- a/src/components/customer/faq.css
+++ b/src/components/customer/faq.css
@@ -104,3 +104,21 @@
 .menuList li a:hover {
   color: #ffffff;
 } */
+
+.accoImg {
+  width: 25px;
+  height: 25px;
+  margin: 0 20px 10px;
+}
+
+.answerBox {
+  display: flex;
+  align-items: center;
+  height: 100px;
+  line-height: 100px;
+}
+
+.font-weight-bold {
+  height: 70px;
+  line-height: 70px;
+}
