--- a/src/components/program/infoinput.css
+++ b/src/components/program/infoinput.css
@@ -2,6 +2,16 @@
     color: #636363;
 }
 
+table{
+    padding:0;
+    border:0;
+    border-spacing:0px;
+    border-collapse:collapse;
+}
+th, td{
+    padding:0;
+}
+
 .content {
     padding: 100px 0;
 }
