--- a/src/components/customer/customer.css
+++ b/src/components/customer/customer.css
@@ -11,11 +11,11 @@ h3 {
   justify-content: center;
   margin-top: 50px;
 }
-.listItem {
+.listContainer li {
   display: block;
   flex: 0 1 100%;
-  width: 260px;
-  height: 80px;
+  width: 200px;
+  height: 50px;
   margin-right: 30px;
   background-color: #dddddd;
   border-radius: 50px;
@@ -23,11 +23,23 @@ h3 {
   color: #454545;
   font-size: 20px;
   text-align: center;
-  line-height: 80px;
+  line-height: 50px;
 }
-.listItem.on {
+
+button {
+  border: none;
+  border-radius: 50px;
+  box-shadow: none;
+  cursor: pointer;
+  width: 100%;
+  background-color: #dddddd;
+  color: #454545;
+}
+
+.on {
   background-color: #03a65a;
   color: #fff;
+  font-weight: bold;
 }
 
 /* 검색창 */
