--- a/src/components/customer/question.css
+++ b/src/components/customer/question.css
@@ -1,8 +1,4 @@
-.container {
-  width: 1300px;
-  margin: 0 auto;
-  padding: 0;
-}
+/* table component style in NoticeList, QuestionList */
 .table {
   width: 100%;
 }
