--- a/src/components/common/header.css
+++ b/src/components/common/header.css
@@ -1,151 +1,179 @@
 
-.header-top .header-inner {
-  display: flex;
-  align-items: center;
-  padding: 30px 0;
-}
-
-.header-top .top-logo {
-}
-
-.header-top .top-logo a{
-  display: block;
-  width: 180px;
-  height: 62px;
-  background: url(/public/images/logo.png) no-repeat;
-  background-size: 180px 62px;
-  text-indent: -9999px;
-}
-
-.header-top .top-search{
-  position: relative;
-  display: flex;
-  align-items: center;
-  height: 62px;
-  margin-left: 50px;
-  margin-right: auto;
- 
-}
-
-.header-top .top-search-input {
-  padding:11px 38px 9px 10px;
-  border: none;
-  border-bottom: 1px solid black;
-  font-size: 16px;
-}
-
-.header-top .top-search-input:focus {
-  outline : none;
-}
-
-.header-top .top-search-btn {
-  position: absolute;
-  top:30%;right:0;
-
-}
-
-.header-top .top-search-btn img{
-  width: 24px;
-}
-
-.header-top .top-btn{
+/* PC 헤더 */
+@media screen and (min-width:768px){
+  .header-top .header-inner {
+    display: flex;
+    align-items: center;
+    padding: 30px 0;
+  }
   
-
-}
-
-.header-top .top-btn a{
-  margin:0 8px;
-  font-size:14px;
-  color:#7e7e7e;
-}s
-
-.header-top .top-btn .sitemap{
-  margin-left: 8px;
-}
-
-
-
-
-/* gnb */
-nav.header-bottom {
-  position: relative;
-}
-.header-bottom ul.gnb::before{
-  content: '';
-  display: block;
-  position: absolute;
-  top: 70px;
-  left: 0;
-  width: 100%;
-  height: 0px;
-  background-color: #fff;
-  box-shadow: 0 4px 4px -4px #666;
-  overflow: hidden;
-  z-index: 9999;
-
-}
-.header-bottom ul.gnb:hover::before{
-  height: 250px;
-  transition: height .4s ease-out;
-}
-
-.header-bottom ul.gnb {
-  display: flex;
+  .header-top .top-logo {
+  }
   
-}
-
-.header-bottom ul.gnb li.depth1 {
-  flex : auto;
-  height: 70px;
-}
-.header-bottom ul.gnb > li.depth1:hover>a {
-  color: #27aa84;
-  /* background-color: #27aa84;
-  border-radius: 6px 6px 0 0; */
-}
-
-.header-bottom ul.gnb li.depth1 > a {
-  display: block;
-  width: 100%;
-  height: 100%;
-  line-height: 70px;
-  text-align: center;
-  font-size: 20px;
-  font-weight: 500;
-}
-
-.header-bottom ul.gnb li.depth1 ul.depth2 {
-  position: absolute;
-  height: 0px;
-  overflow: hidden;
-}
-
-.header-bottom ul.gnb:hover li.depth1 ul.depth2 {
-  height: 230px;
-  padding-left: 41px;
-  padding-bottom: 12px;
-  text-align: left;
-  padding-top: 19px;
-  cursor: pointer;
-  overflow: hidden;
-  transition: height .5s ease-out;
-  z-index: 9999;
+  .header-top .top-logo a{
+    display: block;
+    width: 180px;
+    height: 62px;
+    background: url(/public/images/logo.png) no-repeat;
+    background-size: 180px 62px;
+    text-indent: -9999px;
+  }
   
-}
-.header-bottom ul.gnb:hover li.depth1 ul.depth2 li{
-}
-.header-bottom ul.gnb:hover li.depth1 ul.depth2 li a{
-  display: block;
-  /* width: 100%; */
-  height: 100%;
-  padding: 5px 0;
-  margin-left: 50px;
-}
-.header-bottom ul.gnb li.depth1 ul.depth2 li:hover a{
-  color: #666;
-  text-decoration: underline;
-  text-decoration-color: #27aa84;
-}
+  .header-top .top-search{
+    position: relative;
+    display: flex;
+    align-items: center;
+    height: 62px;
+    margin-left: 50px;
+    margin-right: auto;
+   
+  }
+  
+  .header-top .top-search-input {
+    padding:11px 38px 9px 10px;
+    border: none;
+    border-bottom: 1px solid black;
+    font-size: 16px;
+  }
+  
+  .header-top .top-search-input:focus {
+    outline : none;
+  }
+  
+  .header-top .top-search-btn {
+    position: absolute;
+    top:30%;right:0;
+  
+  }
+  
+  .header-top .top-search-btn img{
+    width: 24px;
+  }
+  
+  .header-top .top-btn{
+    
+  
+  }
+  
+  .header-top .top-btn a{
+    margin:0 8px;
+    font-size:14px;
+    color:#7e7e7e;
+  }s
+  
+  .header-top .top-btn .sitemap{
+    margin-left: 8px;
+  }
+  
+  
+  
+  
+  /* gnb */
+  nav.header-bottom {
+    position: relative;
+  }
+  .header-bottom ul.gnb::before{
+    content: '';
+    display: block;
+    position: absolute;
+    top: 70px;
+    left: 0;
+    width: 100%;
+    height: 0px;
+    background-color: #fff;
+    box-shadow: 0 4px 4px -4px #666;
+    overflow: hidden;
+    z-index: 9999;
+  
+  }
+  .header-bottom ul.gnb:hover::before{
+    height: 250px;
+    transition: height .4s ease-out;
+  }
+  
+  .header-bottom ul.gnb {
+    display: flex;
+    
+  }
+  
+  .header-bottom ul.gnb li.depth1 {
+    flex : auto;
+    height: 70px;
+  }
+  .header-bottom ul.gnb > li.depth1:hover>a {
+    color: #27aa84;
+    /* background-color: #27aa84;
+    border-radius: 6px 6px 0 0; */
+  }
+  
+  .header-bottom ul.gnb li.depth1 > a {
+    display: block;
+    width: 100%;
+    height: 100%;
+    line-height: 70px;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 500;
+  }
+  
+  .header-bottom ul.gnb li.depth1 ul.depth2 {
+    position: absolute;
+    height: 0px;
+    overflow: hidden;
+  }
+  
+  .header-bottom ul.gnb:hover li.depth1 ul.depth2 {
+    height: 230px;
+    padding-left: 41px;
+    padding-bottom: 12px;
+    text-align: left;
+    padding-top: 19px;
+    cursor: pointer;
+    overflow: hidden;
+    transition: height .5s ease-out;
+    z-index: 9999;
+    
+  }
+  .header-bottom ul.gnb:hover li.depth1 ul.depth2 li{
+  }
+  .header-bottom ul.gnb:hover li.depth1 ul.depth2 li a{
+    display: block;
+    /* width: 100%; */
+    height: 100%;
+    padding: 5px 0;
+    margin-left: 50px;
+  }
+  .header-bottom ul.gnb li.depth1 ul.depth2 li:hover a{
+    color: #666;
+    text-decoration: underline;
+    text-decoration-color: #27aa84;
+  }
+  
+} 
 
 
-
+/* 모바일 헤더 */
+@media screen and (max-width:767px){
+  .m-header-cont {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 15;
+    padding: 0 11px;
+    border-bottom: 1px solid #ddd;
+    background: rgba(255,255,255,.95);
+  }
+  .m-header-cont .btn-gnb-main {
+    padding: 16px 4px 15px;
+  }
+  .m-header-cont .btn-gnb-main img{
+    width: 90px;
+  }
+  .m-header-cont .btn-gnb-menu img{
+    width: 30px;
+  }
+}
