--- a/src/components/academy/OrderPage.css
+++ b/src/components/academy/OrderPage.css
@@ -5,57 +5,57 @@
   list-style: none;
   font-family: Noto Sans KR;
 }
-.contents {
+.orderPage-contents {
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
   align-content: flex-start;
   justify-content: space-around;
 }
-.left {
+.orderPage-left {
   align-items: center;
 }
-.right {
+.orderPage-right {
   margin-top: 50px;
 }
-.orderInfo.h2,
-p,
-ul {
+.orderInfo.orderPage-h2,
+.orderPage-p,
+.orderPage-ul {
   padding: 24px 0;
 }
-select {
+.orderPage-select {
   width: 70px;
   height: 20px;
 }
-.para {
+.orderPage-input {
   width: 300px;
   height: 150px;
 }
-h3 {
+.orderPage-h3 {
   width: 200px;
   height: 30px;
   font-size: 35px;
   color: #aaaaaa;
   margin-bottom: 30px;
 }
-span {
+.orderPage-span {
   width: 1000px;
   height: 30px;
   font-size: 20px;
   color: #aaaaaa;
 }
 
-.Box {
+.orderPage-Box {
   margin-top: 40px;
   width: 400px;
   height: 400px;
   background: #e8e8e8;
   border-radius: 20px;
 }
-ul {
+.orderPage-ul {
   display: flex;
 }
-.miniBox {
+.orderPage-miniBox {
   align-content: space-between;
   margin-left: 22px;
   width: 100px;
@@ -63,7 +63,7 @@ ul {
   background: #e8e8e8;
   border-radius: 20px;
 }
-.infoBtn {
+.orderPage-infoBtn {
   font-size: 15px;
   margin-top: 30px;
   margin-bottom: 50px;
