--- a/src/components/academy/Partnership.css
+++ b/src/components/academy/Partnership.css
@@ -1,34 +1,34 @@
-.wrap {
+.Partnership-wrap {
   width: 900px;
 }
-FormGroup {
+.Partnership-FormGroup {
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
-h3 {
+.Partnership-h3 {
   width: 200px;
   height: 30px;
   font-size: 35px;
   color: #aaaaaa;
   margin-bottom: 30px;
 }
-span {
+.Partnership-span {
   width: 1000px;
   height: 30px;
   font-size: 20px;
   color: #aaaaaa;
   margin-bottom: 50px;
 }
-Label {
+.Partnership-Label {
   font-weight: 700px;
   font-size: 12px;
 }
 
-.companyImg {
+.Partnership-companyImg {
   width: 200px;
   height: 200px;
 }
-.topTitle {
+.Partnership-topTitle {
   margin-top: 50px;
 }
