--- a/src/components/mypage/ChangePw.css
+++ b/src/components/mypage/ChangePw.css
@@ -1,20 +1,20 @@
-.wrap1 {
+.ChangePw-wrap1 {
   box-sizing: border-box;
 }
 
-.myTitle {
+.ChangePw-myTitle {
   font-weight: 800;
   color: gray;
   margin-bottom: 30px;
 }
-.contentBox h2 {
+.ChangePw-contentBox h2 {
   margin-top: 80px;
 }
-.contentBox {
+.ChangePw-contentBox {
   margin-left: 100px;
   height: 700px;
 }
-.inputEnd {
+.ChangePw-inputEnd {
   position: relative;
 }
 .contentBox button {
@@ -25,40 +25,19 @@
   height: 40px;
   border-radius: 40px;
 }
-h3,
-.hello {
-  color: gray;
-  position: absolute;
-  right: 10px;
-  display: block;
-  margin-bottom: 30px;
-}
-.FormNow {
+
+.ChangePw-FormNow {
   margin-top: 30px;
   margin-bottom: 70px;
   width: 700px;
 }
-.info {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  padding: 20px 20px;
-  font-style: none;
-}
-.info button {
+
+.ChangePw-info button {
   border: none;
   background-color: transparent;
 }
 
-.sideBar {
-  width: 200px;
-  height: 250px;
-  background-color: lightgrey;
-  color: gray;
-  position: fixed;
-  position: relative;
-}
-.contentBox {
+.ChangePw-contentBox {
   width: 1100px;
   padding-left: 40px;
 }
