--- a/src/components/customer/visit.css
+++ b/src/components/customer/visit.css
@@ -1,116 +1,101 @@
-.wrapper {
-  margin-bottom: 150px;
-}
+/* title */
 
-.title {
-  margin: 106px 65px;
+.visitTitle {
+  margin: 90px 65px;
 }
-.title h1 {
+.visitTitle h1 {
+  font-weight: bold;
   color: #777777;
-  font-size: 30px;
+  font-size: 28px;
+  margin-bottom: 10px;
 }
-
-.title h2 {
+.visitTitle h2 {
   color: #aaaaaa;
-  font-size: 20px;
+  font-size: 18px;
+  margin-bottom: 20px;
 }
 
-.menuList {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.menuList li {
-  display: block;
-  color: #454545;
-  font-size: 20px;
-  text-align: center;
-  background-color: #dddddd;
-  border-radius: 50px;
-  width: 200px;
-  height: 50px;
-  line-height: 50px;
-  margin-right: 30px;
-  margin-bottom: 50px;
-}
+/* submenuList */
 
 .visitSubMenuBox {
-  margin-top: 150px;
-  margin-bottom: 94px;
+  margin-top: 100px;
+  margin-bottom: 80px;
 }
-
 .visitSubMenuList {
+  margin: 0;
+  padding: 0;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-
 .visitSubMenuList li {
   display: block;
-  color: #898989;
+  color: #999;
   font-size: 20px;
   text-align: center;
   background-color: #dddddd;
   border-radius: 50px;
-  margin-right: 50px;
-  width: 250px;
+  margin-left: 50px;
+  width: 200px;
   height: 40px;
   line-height: 40px;
 }
-
-button {
+.visitSubMenuListBtn {
   border: none;
   border-radius: 50px;
   box-shadow: none;
   cursor: pointer;
   width: 100%;
   background-color: #dddddd;
-  color: #898989;
+  color: #999;
 }
-
 .subOn {
   color: #ffffff;
   background-color: #5ebf92;
-  font-weight: bold;
 }
 
-.address {
+/* visitInfo */
+
+.visitInfo .address {
   display: flex;
   align-items: center;
   color: #666666;
   margin-bottom: 30px;
 }
-
 .address h3 {
   font-size: 25px;
-  font-weight: bold;
 }
-
-.address .share {
+.share {
   width: 100px;
   height: 40px;
   line-height: 40px;
   padding-left: 10px;
   padding-right: 50px;
   display: block;
-  font-size: 20px;
+  border: none;
+  font-size: 18px;
   background: url(/public/images/share.png) no-repeat 50px center;
   background-size: 20px;
 }
-
 .mapBox {
   display: flex;
-  margin-bottom: 238px;
+  margin-bottom: 150px;
 }
-
 .mapBox .officeImg {
   width: 473px;
-  height: 555px;
-  border: 1px solid #666666;
+  height: 500px;
   margin-right: 67px;
 }
+#map {
+  width: 1060px;
+  height: 500px;
+}
 
+/* transport */
+
+.transport {
+  margin-bottom: 50px;
+}
 .transport h3 {
   width: 150px;
   height: 50px;
@@ -122,47 +107,54 @@ button {
   font-size: 20px;
   text-align: center;
 }
-
 .transportList {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   margin-top: 50px;
   color: #666666;
 }
-
 .car,
 .subway,
 .bus {
   display: flex;
   justify-content: center;
 }
-
+.subway {
+  margin-left: 20px;
+}
 .transportListTitle {
   width: 80px;
   height: 180px;
-  margin-right: 54px;
+  margin-right: 30px;
   font-size: 20px;
   font-weight: bold;
   text-align: center;
   padding-top: 100px;
 }
-
 .carTitle {
-  background: url(/public/images/car.png) no-repeat center top;
+  background: url(/public/images/visit/car.png) no-repeat center top;
   background-size: 70px;
 }
 .subwayTitle {
-  background: url(/public/images/subway.png) no-repeat center top;
+  background: url(/public/images/visit/subway.png) no-repeat center top;
   background-size: 70px;
 }
 .busTitle {
-  background: url(/public/images/bus2.png) no-repeat center top;
+  background: url(/public/images/visit/bus2.png) no-repeat center top;
   background-size: 60px;
 }
-
 .transportListContents {
-  width: 250px;
+  width: 300px;
   height: 180px;
-  /* border: 1px solid #000; */
+  margin: auto;
   font-size: 16px;
+  display: flex;
+  flex-direction: column;
+}
+.car .transportListContents p:nth-child(2),
+.car .transportListContents p:last-child {
+  font-size: 14px;
+}
+.subway .transportListContents {
+  width: 200px;
 }
