--- a/src/components/customer/question.css
+++ b/src/components/customer/question.css
@@ -1,17 +1,71 @@
-/* table component style in NoticeList, QuestionList */
-.table {
-  width: 100%;
+.question-writing-form {
+  border-collapse: collapse;
+}
+#question-writing-form {
+  width: 1300px;
+  margin: 100px auto;
+}
+#question-writing-form,
+.writing-title,
+.question-title,
+.question-item-box {
+  border: 1px solid #eeeeee;
 }
 
-.pageNation ul li a {
-  width: 100%;
-  font-size: 25px;
-  color: #000;
+.question-form-item {
+  display: flex;
+}
+
+.question-title {
+  width: 30%;
+  padding: 10px;
+}
+.question-item-box {
+  width: 50%;
+}
+
+#question-name,
+#question-password,
+#question-contact,
+#question-email,
+#question-content {
+  border: 1px solid #eeeeee;
+
   border: none;
+  outline: none;
 }
-.pageNation ul li:nth-child(2) a {
-  border-left: 1px solid #000;
+
+.question-title-box {
+  width: 195px;
+  height: 400px;
+  text-align: center;
+  border: 1px solid #eeeeee;
 }
-.pageNation ul li:nth-last-child(2) a {
-  border-right: 1px solid #000;
+.question-content-box {
+  width: calc(1296px - 200px);
+}
+#question-content {
+  text-align: center;
+  float: right;
+  width: 100%;
+  height: 100%;
+}
+.question-btn-box {
+  display: flex;
+  justify-content: center;
+}
+.question-submit-btn {
+  width: 150px;
+  height: 50px;
+  background-color: #03a65a;
+  color: #fff;
+  margin-bottom: 90px;
+}
+.cf::after {
+  content: "";
+  width: 0;
+  height: 0;
+  font-size: 0;
+  display: block;
+  clear: both;
 }
