--- a/src/components/mypage/ChangePw.css
+++ b/src/components/mypage/ChangePw.css
@@ -2,17 +2,11 @@
   box-sizing: border-box;
 }
 
-.ChangePw-myTitle {
-  font-weight: 800;
-  color: gray;
-  margin-bottom: 30px;
+.ChangePw-contentBox {
 }
+
 .ChangePw-contentBox h2 {
   margin-top: 80px;
-}
-.ChangePw-contentBox {
-  margin-left: 100px;
-  height: 700px;
 }
 .ChangePw-inputEnd {
   position: relative;
@@ -32,7 +26,7 @@
   width: 700px;
 }
 
-.ChangePw-info button {
+.ChangePw-contentBox button.form-btn {
   border: none;
   background-color: transparent;
 }
@@ -40,4 +34,9 @@
 .ChangePw-contentBox {
   width: 1100px;
   padding-left: 40px;
+}
+
+/* flex 정렬 */
+.inner-box .flex-box {
+  display: flex;
 }
