--- a/src/components/main/main.css
+++ b/src/components/main/main.css
@@ -9,12 +9,7 @@
 
 
 /* 과정 카테고리 */
-.main-wrapper .program-category {
-  padding: 50px 0;
-}
-.program-category .main-text-box {
 
-}
 .main-text-box .eyebrow {
   display: inline-block;
   margin-bottom: 14px;
@@ -23,12 +18,6 @@
   background-color: #5EBF92;
   font-size: 17px;
   color: #fff;
-}
-.main-text-box .p-title {
-  display: block;
-  font-size: 20px;
-  font-weight: bold;
-  margin-bottom: 20px;
 }
 .main-text-box .p-list {
   margin: 0;
@@ -63,128 +52,18 @@
 .program-category .main-program-img {
 
 }
-.main-program-img .program-list {
-  display: flex;
-  margin: 0;
-  padding: 0;
-  flex-wrap: wrap;
-}
-.main-program-img .program-item {
-  vertical-align:top;
-  margin-right: 30px;
-}
-.main-program-img .program-item .item-img {
-  position: relative;
-}
-.main-program-img .program-item .item-img:hover {
-  opacity:0.7;
-}
-.main-program-img .program-item .item-img img{ 
-  width: 290px;
-  height: 230px;
-  border-radius: 7px;
-  cursor: pointer;
-}
-.main-program-img .program-item .item-img .item-img-desc{
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  background: rgba(0,0,0,0.9);
-  width: 100%;
-  height: 0;
-  padding: 15px;
-  box-sizing: border-box;
-  opacity: 0;
-  border-radius: 7px;
-  transition: height 0.35s ease-in-out;
-  cursor: pointer;
-  color: #fff;
-  overflow: hidden;
-}
-.main-program-img .program-item .item-img:hover .item-img-desc{
-  opacity:1;
-  height: 201px;
-}
-.main-program-img .program-item .item-img .item-img-desc p{
-  
-}
-.main-program-img .item-text{
-  margin-top: 10px;
-  margin-bottom: 28px;
 
-}
-.main-program-img .item-text p {
-  margin-bottom: 0;
-}
-.main-program-img .item-title{
-  font-weight: 500;
-
-}
-.main-program-img .item-date{
-  font-weight: 100;
-
-}
-.main-program-img .item-days{
-  font-weight: 100;
-}
 
 
 /* EX 콘텐츠 */
 .main-wrapper .main-excontents {
   padding-bottom: 100px;
 }
-.main-ex-img .ex-list{
-  display: flex;
-  flex-wrap: wrap;
-  margin: 0;
-  padding: 0;
-}
 .main-ex-img .ex-list .ex-item{
   margin-right: 40px;
   margin-bottom: 24px;
 }
 
-.main-ex-img .ex-list .ex-item .item-img img {
-  width: 390px;
-  border-radius: 7px;
-  cursor: pointer;
-}
-.main-ex-img .ex-list .ex-item .item-img:hover {
-  opacity:0.7;
-}
-
-/* 더보기 버튼 */
-.btn-box.more {
-  text-align: center;
-  margin-top: 40px;
-  padding-bottom: 20px;
-}
-.btn-more {
-  width: 71px;
-  border:0;
-  background-color: #fff;
-  position:relative;
-  cursor: pointer;
-}
-.btn-more span {
-  display:inline-block;
-  padding-right:36px;
-  font-size:14px;
-  color:#000;
-  line-height:28px;
-  letter-spacing:-1.5px;
-  vertical-align:top;
-}
-.btn-more:after {
-  content:'';
-  position:absolute;
-  top:50%;
-  right:0;
-  width:28px;
-  height:28px;
-  margin-top:-14px;
-  background:url(/public/images/main/ico_btn_more.png) no-repeat center center;
-}
 
 /* 공지사항 & HR샵 */
 .main-bottom {
@@ -298,6 +177,135 @@
     height: 15px;
   
   }
+
+  /* 과정 카테고리 */
+  .main-wrapper .program-category {
+    padding: 50px 0;
+  }
+  .program-category .main-text-box {
+
+  }
+  
+  .main-text-box .p-title {
+    display: block;
+    font-size: 20px;
+    font-weight: bold;
+    margin-bottom: 20px;
+  }
+  .main-program-img .program-list {
+    display: flex;
+    margin: 0;
+    padding: 0;
+    flex-wrap: wrap;
+  }
+  .main-program-img .program-item {
+    vertical-align:top;
+    margin-right: 30px;
+  }
+  .main-program-img .program-item .item-img {
+    position: relative;
+  }
+  .main-program-img .program-item .item-img:hover {
+    opacity:0.7;
+  }
+  .main-program-img .program-item .item-img img{ 
+    width: 290px;
+    height: 230px;
+    border-radius: 7px;
+    cursor: pointer;
+  }
+  .main-program-img .program-item .item-img .item-img-desc{
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    background: rgba(0,0,0,0.9);
+    width: 100%;
+    height: 0;
+    padding: 15px;
+    box-sizing: border-box;
+    opacity: 0;
+    border-radius: 7px;
+    transition: height 0.35s ease-in-out;
+    cursor: pointer;
+    color: #fff;
+    overflow: hidden;
+  }
+  .main-program-img .program-item .item-img:hover .item-img-desc{
+    opacity:1;
+    height: 201px;
+  }
+  .main-program-img .program-item .item-img .item-img-desc p{
+    
+  }
+  .main-program-img .item-text{
+    margin-top: 10px;
+    margin-bottom: 28px;
+  }
+  .main-program-img .item-text p {
+    margin-bottom: 0;
+  }
+  .main-program-img .item-title{
+    font-weight: 500;
+  
+  }
+  .main-program-img .item-date{
+    font-weight: 100;
+  
+  }
+  .main-program-img .item-days{
+    font-weight: 100;
+  }
+
+    /* 더보기 버튼 */
+  .btn-box.more {
+    text-align: center;
+    margin-top: 40px;
+    padding-bottom: 20px;
+  }
+  .btn-more {
+    width: 71px;
+    border:0;
+    background-color: #fff;
+    position:relative;
+    cursor: pointer;
+  }
+  .btn-more span {
+    display:inline-block;
+    padding-right:36px;
+    font-size:14px;
+    color:#000;
+    line-height:28px;
+    letter-spacing:-1.5px;
+    vertical-align:top;
+  }
+  .btn-more:after {
+    content:'';
+    position:absolute;
+    top:50%;
+    right:0;
+    width:28px;
+    height:28px;
+    margin-top:-14px;
+    background:url(/public/images/main/ico_btn_more.png) no-repeat center center;
+  }
+
+  /* EX 콘텐츠 */
+  .main-ex-img .ex-list{
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0;
+    padding: 0;
+  }
+  .main-ex-img .ex-list .ex-item .item-img img {
+    width: 390px;
+    border-radius: 7px;
+    cursor: pointer;
+  }
+  .main-ex-img .ex-list .ex-item .item-img:hover {
+    opacity:0.7;
+  }
+  
+  
 }
 
 /* 모바일 Main CSS */
@@ -312,9 +320,72 @@
   }
   .main-banner .swiper-button-prev,
   .main-banner .swiper-button-next,
-  .swiper-pause{
+  .swiper-pause,
+  .ex-item .item-comment{
     display: none;
   }
+
+  /* 과정 카테고리 */
+  .main-wrapper .program-category {
+    padding: 50px 15px;
+  }
+  .main-text-box .p-title {
+    display: block;
+    font-size: 17px;
+    font-weight: bold;
+    margin-bottom: 20px;
+  }
+  .main-text-box .p-list {
+    font-size: 14px;
+  }
+  .main-program-img .program-list {
+    display: flex;
+    margin: 0;
+    padding: 0;
+    flex-wrap: nowrap;
+    overflow-x: auto;
+    width: 100%;
+  }
+  .main-program-img .program-item {
+    vertical-align:top;
+    margin-right: 30px;
+  }
+  .main-program-img .program-item .item-img {
+    position: relative;
+  }
+  .main-program-img .program-item .item-img img{ 
+    width: 250px;
+    height: 210px;
+    border-radius: 7px;
+    cursor: pointer;
+  }
+  .main-program-img .program-item .item-img .item-img-desc,
+  .main-program-img .item-text,
+  .btn-more{
+    display: none;
+  }
+
+  /* EX 콘텐츠 */
+  .main-wrapper .main-excontents {
+    padding-left: 15px;
+    padding-right: 15px; 
+  }
+  .main-ex-img .ex-list{
+    display: flex;
+    flex-wrap: nowrap;
+    margin: 0;
+    padding: 0;
+    overflow-x: auto;
+    width: 100%;
+  }
+  .main-ex-img .ex-list .ex-item .item-img img {
+    width: 290px;
+    border-radius: 7px;
+    cursor: pointer;
+  }
+
+  
+  
 }
 
 
