--- a/src/components/sample/sample.css
+++ b/src/components/sample/sample.css
@@ -1,3 +1,7 @@
+
+@media screen and (min-width:768px){ 
+
+
 /* 01.상단 공통 타이틀 */
 .c-top-title{
   margin: 90px 65px;
@@ -499,4 +503,6 @@
 .complete-main-btn{
   text-align: center;
   margin: -80px 0 30px;
+}
+
 }
