--- a/src/components/job/job.css
+++ b/src/components/job/job.css
@@ -1,10 +1,30 @@
-.menuList {
+/* title */
+
+.jobTitle {
+  margin: 90px 65px;
+}
+.jobTitle h1 {
+  font-weight: bold;
+  color: #777777;
+  font-size: 28px;
+  margin-bottom: 10px;
+}
+
+.jobTitle h2 {
+  color: #aaaaaa;
+  font-size: 18px;
+  margin-bottom: 20px;
+}
+
+/* menu */
+
+.jobMenuList {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.menuList li {
+.jobMenuList li {
   border: 1px solid transparent;
   background-color: #dddddd;
   border-radius: 50px;
@@ -13,9 +33,6 @@
   line-height: 50px;
   margin-right: 30px;
   margin-bottom: 50px;
-}
-
-.menuList li a {
   display: block;
   color: #454545;
   font-size: 20px;
