--- a/src/components/mypage/sidemenu.css
+++ b/src/components/mypage/sidemenu.css
@@ -1,11 +1,25 @@
 .sideMenuBox {
-  max-width: 250px;
-  height: 300px;
-  background-color: lightgrey;
-  color: gray;
-  margin-top: 50px;
+  max-width: 400px;
+  background-color: #eee;
+  color: #555;
+ padding: 30px 20px 30px 0;
 }
 
 .sideMenuBox ul.info li {
   border: none;
 }
+
+.sideMenuBox .info em {
+  color: #555;
+  font-weight: 888;
+  font-size: 18px;
+  font-style: normal;
+  margin-bottom: 15px;
+}
+
+.sideMenuBox .info li {
+  color: #666;
+  font-weight: 300;
+}
+
+
