--- a/src/components/member/join.css
+++ b/src/components/member/join.css
@@ -1,34 +1,56 @@
-.join-wrapper{
-
+@media screen and (min-width:768px){ 
+  /* 회원가입 01.회원구분 */
+  .join-inner .top-title{
+    margin: 90px 65px;
+  }
+  section .join-cont{
+    width: 600px;
+    margin: 50px auto;
+    margin-bottom: 100px;
+  }
+  .join-inner .top-title h2{
+    font-weight: 700;
+    color: #777777;
+    font-size: 30px;
+  }
+  .join-inner .top-title h3{
+    color: #aaaaaa;
+    font-size: 20px;
+    padding: 8px 0;
+  }
+  .join-step {
+    margin: 0 auto;
+  }
 }
-.join-wrapper .join-inner{
+@media screen and (max-width:767px){
+  .join-wrapper{
+    padding: 0 15px;
+    margin-bottom: 50px;
 
+  }
+  /* 회원가입 01.회원구분 */
+  .join-inner .top-title{
+    margin: 30px 0;
+  }
+  .join-inner .top-title h2{
+    font-weight: 700;
+    color: #777777;
+    font-size: 25px;
+  }
+  .join-inner .top-title h3{
+    color: #aaaaaa;
+    font-size: 15px;
+    padding: 8px 0;
+  }
+  .join-step ol{
+    padding: 0; 
+    margin: 0;
+  }
 }
+
 
 
 /* 회원가입 01.회원구분 */
-section .join-cont{
-  width: 600px;
-  margin: 50px auto;
-  margin-bottom: 100px;
-}
-.join-inner .top-title{
-  margin: 90px 65px;
-}
-.join-inner .top-title h2{
-  font-weight: 700;
-  color: #777777;
-  font-size: 30px;
-}
-.join-inner .top-title h3{
-  color: #aaaaaa;
-  font-size: 20px;
-  padding: 8px 0;
-}
-
-.join-step {
-  margin: 0 auto;
-}
 .join-step ol{
   display: flex;
 }
