--- a/src/components/customer/customer.css
+++ b/src/components/customer/customer.css
@@ -1,38 +1,22 @@
-/* 항목별 페이지 구분 */
-.listSection {
-  width: 1300px;
-  margin: 0 auto;
-}
-.listContainer {
+.customerListContainer {
   display: flex;
   justify-content: center;
+  align-items: center;
   margin-top: 50px;
 }
-.listContainer li {
+.customerList {
   display: block;
-  flex: 0 1 100%;
   width: 200px;
-  height: 50px;
-  margin-right: 30px;
+  height: 55px;
+  margin-left: 20px;
   background-color: #dddddd;
   border-radius: 50px;
   text-decoration: none;
   color: #454545;
   font-size: 20px;
   text-align: center;
-  line-height: 50px;
+  line-height: 55px;
 }
-
-button {
-  border: none;
-  border-radius: 50px;
-  box-shadow: none;
-  cursor: pointer;
-  width: 100%;
-  background-color: #dddddd;
-  color: #454545;
-}
-
 .on {
   background-color: #03a65a;
   color: #fff;
