--- a/src/components/main/popup/login.css
+++ b/src/components/main/popup/login.css
@@ -128,17 +128,7 @@
 .login-box .pw-box:before {
   background-image:url(/public/images/main/ico_pw_box.png);
 }
-.login-box .error-msg {
-  position:absolute;
-  bottom:-35px;
-  left:0;
-  margin:0;
-  padding-left: 21px;
-  background: url(/public/images/main/ico_error.png) no-repeat left center;
-  font-size: 12px;
-  color: #ec1f2f;
-  line-height: 18px;
-}
+
 .login-chk-box {
   margin-top:0;
   padding-top:0;
@@ -203,7 +193,7 @@
 .login-chk-box .btn-login {
   padding:12px 10px;
   border-radius:23px;
-  background:#5EBF92;
+  background:#03A65A;
   font-size:16px;
   font-weight:700;
   color:#fff;
@@ -240,4 +230,46 @@
   background:url(/public/images/main/img_popup_close.png) no-repeat center center;
   text-indent:101%;
   white-space:nowrap;
+}
+
+@media screen and (min-width:768px){ 
+  .login-box .error-msg {
+    position:absolute;
+    bottom:-35px;
+    left:0;
+    margin:0;
+    padding-left: 21px;
+    background: url(/public/images/main/ico_error.png) no-repeat left center;
+    font-size: 12px;
+    color: #ec1f2f;
+    line-height: 18px;
+  }
+}
+
+
+@media screen and (max-width:767px){
+  .login-cont{
+    padding: 80px 80px;
+  }
+  .login-title {
+    font-size:28px;
+    font-weight:700;
+    color:#000;
+    line-height:40px;
+    letter-spacing:-1.5px;
+  }
+  .btn-login{
+    border: none;
+  }
+  .underline-text-box{
+    margin-left: 15px;
+    margin-top: 20px;
+  }
+  .login-box .error-msg {
+    margin-top: 10px;
+    padding-left: 21px;
+    font-size: 12px;
+    color: #ec1f2f;
+    line-height: 18px;
+  }
 }
