--- a/src/components/customer/question.css
+++ b/src/components/customer/question.css
@@ -7,34 +7,35 @@
 }
 #question-writing-form,
 .writing-title,
-.question-title,
 .question-item-box {
   border: 1px solid #eeeeee;
 }
-
 .question-form-item {
   display: flex;
 }
-
-.question-title {
-  width: 30%;
-  padding: 10px;
-}
 .question-item-box {
   width: 50%;
+  height: 90px;
 }
-
 #question-name,
 #question-password,
 #question-contact,
 #question-email,
 #question-content {
+  padding: 10px;
+  width: 300px;
   border: 1px solid #eeeeee;
-
   border: none;
   outline: none;
 }
-
+.writing-question-title {
+  width: 30%;
+  height: 100%;
+  font-size: 18px;
+  border-right: 1px solid #eeeeee;
+  line-height: 90px;
+  text-indent: 30px;
+}
 .question-title-box {
   width: 195px;
   height: 400px;
@@ -50,13 +51,21 @@
   width: 100%;
   height: 100%;
 }
+#question-content-title {
+  position: relative;
+  top: 50%;
+  font-size: 18px;
+}
 .question-btn-box {
   display: flex;
   justify-content: center;
 }
 .question-submit-btn {
-  width: 150px;
-  height: 50px;
+  width: 190px;
+  height: 60px;
+  padding: 0 20px;
+  border: none;
+  border-radius: 30px;
   background-color: #03a65a;
   color: #fff;
   margin-bottom: 90px;
@@ -68,4 +77,9 @@
   font-size: 0;
   display: block;
   clear: both;
+}
+
+/* NoticeList 적용 사항 */
+.question-search-box input {
+  margin-bottom: 100px;
 }
