[modify] customer, faq, visit 페이지 구조 및 css 수정

--- a/src/components/customer/customer.css
+++ b/src/components/customer/customer.css
@@ -17,7 +17,7 @@
   text-align: center;
   line-height: 55px;
 }
-.on {
+.customerList.on {
   background-color: #03a65a;
   color: #fff;
   font-weight: bold;
