--- a/src/components/customer/faq.css
+++ b/src/components/customer/faq.css
@@ -23,7 +23,7 @@
   margin-bottom: 80px;
 }
 
-.fqaSubMenuList {
+.fqaSubMenuContainer {
   margin: 0;
   padding: 0;
   display: flex;
@@ -31,7 +31,7 @@
   align-items: center;
 }
 
-.fqaSubMenuList li {
+.fqaSubMenuList {
   background: #dddddd;
   border-radius: 50px;
   width: 180px;
@@ -43,7 +43,7 @@
   text-align: center;
   margin-left: 30px;
 }
-
+/* 
 .fqaSubMenuListBtn {
   border: none;
   border-radius: 50px;
@@ -52,9 +52,9 @@
   width: 100%;
   background: #dddddd;
   color: #999;
-}
+} */
 
-.subOn {
+.fqaSubMenuList.subOn {
   color: #ffffff;
   background-color: #5ebf92;
 }
@@ -70,7 +70,7 @@
   margin: 0 20px 10px;
 }
 
-.answerBox {
+.accoBox .answerBox {
   display: flex;
   align-items: center;
   height: 100px;
